# quick-o-pedia-AI

backend/: .gitignore  main.py  pyproject.toml  rag.py  requirements.txt  start.py
backend_new/: main1.py  requirements.txt  scraper.py
frontend/: package-lock.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BackendStatus.tsx  ChatModal.tsx  Footer.tsx  Header.tsx  Hero.tsx  Scraper.tsx  StatsSection.tsx
frontend/lib/: api.ts  config.ts
